// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TwoFactorAuthenticationEnforcement /> render() should render turned on/off 1`] = `
<div>
  <div
    class="mt-5 mb-5"
  >
    <h4
      class="mb-2"
    >
      <i
        class="material-icons mr-1"
      >
        lock
      </i>
      Two-Factor Authentication (2FA)
    </h4>
    <p>
      For an added layer of security, you can require your users to use two-factor authentication (2FA) when they sign in to Gorgias.
    </p>
    <div>
      <label
        aria-checked="true"
        class="label label"
        for="twoFAEnforcementToggle"
        role="switch"
      >
        <input
          checked=""
          class="input"
          disabled=""
          id="twoFAEnforcementToggle"
          name="twoFAEnforcementToggle"
          type="checkbox"
        />
        <div
          class="slider"
        />
        Require 2FA for all users
      </label>
    </div>
  </div>
</div>
`;

exports[`<TwoFactorAuthenticationEnforcement /> render() should render turned on/off 2`] = `
<div>
  <div
    class="mt-5 mb-5"
  >
    <h4
      class="mb-2"
    >
      <i
        class="material-icons mr-1"
      >
        lock
      </i>
      Two-Factor Authentication (2FA)
    </h4>
    <p>
      For an added layer of security, you can require your users to use two-factor authentication (2FA) when they sign in to Gorgias.
    </p>
    <div>
      <label
        aria-checked="false"
        class="label label"
        for="twoFAEnforcementToggle"
        role="switch"
      >
        <input
          class="input"
          disabled=""
          id="twoFAEnforcementToggle"
          name="twoFAEnforcementToggle"
          type="checkbox"
        />
        <div
          class="slider"
        />
        Require 2FA for all users
      </label>
    </div>
  </div>
</div>
`;
